--- a/styles/help.css
+++ b/styles/help.css
@@ -30,9 +30,9 @@
 	:: Grid
 	-------------------------------------------------- */
 
-	.container { padding: 40px 20px 0 20px; }
+	.container { padding: 10px 20px 0 20px; }
 	
-	.row { width: 100%; max-width: 1060px; min-width: 727px; margin: 0 auto; }
+	.row, header .container, footer .page { width: 100%; max-width: 1060px; min-width: 828px; margin: 0 auto; }
 	/* To fix the grid into a certain size, set max-width to width */
 	.row .row { min-width: 0px; }
 	
@@ -86,7 +86,7 @@ p {
 	
 	h1 {
 		font-weight: bold; 
-		color: #222;
+		color: #00A9E0;
 		font-size: 38px;
 		line-height: 1.5;
         text-align: center
@@ -94,7 +94,7 @@ p {
 	
 	h2 { 
 	  font-weight: bold; 
-		color: #565656;
+		color: #005293;
 		font-size: 28px;
 		line-height: 1.25;
 	}
@@ -108,7 +108,7 @@ p {
 	
 	h4 { 
 	  font-weight: bold; 
-		color: #565656;
+		color: #939598;
 		font-size: 16px;
 		line-height: 1.25;
 	}
@@ -150,8 +150,7 @@ p {
     #Content-Nav > li > a{
     color: #666666;
     text-decoration: none;
-    padding: 4px 14px;
-      
+          
 }
     
 
@@ -181,54 +180,24 @@ div.main {
 
 /* HEADINGS ----------------------------------------------------------------- */
 /*Page Layout*/
-.container {margin: 0 auto;width: 1000px;text-align: left;position: relative;min-width: 1000px;}
+.container {text-align: left;position: relative;}
 .container .list-el {margin: 0 0 0 40px;padding: 0px 0;}
 .container .list-el li {padding-bottom: 18px;}
 
-/*Header*/
-.tip-top {background: black; min-width: 1000px;}
-.tip-top .container {padding: 4px 0 !important;}
-.tip-top .container ul {margin: 0;list-style: none;float: right;}
-.tip-top .container li {float: left;}
-.tip-top .get-social a {display: block;width: 16px;height: 16px;background-image: url("http://www.versionone.com/assets/img/footer-sprite.png");background-repeat: no-repeat;text-indent: -9000em;overflow: hidden;-webkit-transition: background .2s ease-out .2s;-moz-transition: background .2s ease-out .2s;-o-transition: background .2s ease-out .2s;transition: background .2s ease-out .2s;border-radius: 2px 2px;margin: 0 6px;}
-.tip-top .get-social .linkedin {background-position: -9px -69px;background-color: #84b5d1;}
-.tip-top .get-social .twitter {background-position: -32px -69px;background-color: #73ace2;}
-.tip-top .get-social .facebook {background-position: -54px -69px;background-color: #47549e;}
-.tip-top .get-social .contact {background-position: -145px -69px;background-color: #ebb229;}
-.tip-top .get-social .blogs {background-position: -165px -69px;background-color: #e8c03a;}
-.tip-top .get-social .linkedin:hover {background-position: -9px -92px;}
-.tip-top .get-social .twitter:hover {background-position: -32px -92px;}
-.tip-top .get-social .facebook:hover {background-position: -54px -92px;}
-.tip-top .get-social .contact:hover {background-position: -145px -92px;}
-.tip-top .get-social .blogs:hover {background-position: -165px -92px;}
-.tip-top .get-social a:hover {background-color: #efefef;}
-.tip-top .get-social .txt a {background-image: none;text-indent: 0;color: #fff;text-decoration: none;width: auto;height: auto;font-size: 12px;padding: 2px 5px 2px 5px;}
-.tip-top .get-social .txt a:hover {background: #efefef;color: #CE8416;}
-
-
 /* Branding */
-header .logo {width: 244px;height: 45px;position: absolute;top: 7px;}
+header .logo {width: 244px;height: 45px; float:left;}
 
 /* Global Nav */
-header {height: 60px;background: black;min-width: 1000px;}
-header ul {float: left;}
-header ul li {display: inline-block;float: left;position: relative; margin-top:0em; margin-bottom:0em; }
-header ul li a {display: block;padding: 0 10px;text-decoration: none}
-header .global-menu-bottom a {display: block;padding: 0 30px;text-decoration: none}
-header .global-menu-bottom a.last {display: block;padding: 0 10px 0 20px;text-decoration: none}
+header {height: 60px;background: black;}
+header ul {float: right; height:inherit; margin-top:0;font-size:14px}
+header ul li {display: inline-block;position: relative; margin:0; padding:0; }
+header ul li a {display: block;padding: 0 10px;text-decoration: none; color:#fff;}
 header ul li a:hover {color: #78082d;}
-header .global-menu-top {position: absolute;right: 0;}
-header .global-menu-top {top: .5em;}
-header .global-menu-top a {font-size: 12px;color: #444;}
-header .global-menu-bottom {position: absolute;right: 0;}
-header .global-menu-bottom {top: 8px;}
-header .global-menu-bottom a {font-size: 16px;color: #ffffff;}
-header form {position: absolute;right: 0;}
+nav.global-menu-bottom {padding: 1em 0;}
 
 footer {
 	background: black;
 	display: block;
-	min-width: 1000px;
 }
 footer .page {
 	position: relative;
@@ -269,84 +238,8 @@ footer .get-social a {
 	-o-transition: background .2s ease-out .2s;
 	transition: background .2s ease-out .2s;
 }
-footer .get-social .linkedin {
-	background-position: 0 0;
-	background-color: #84b5d1;
-}
-footer .get-social .google {
-	background-position: -99px 0;
-	background-color: #373737;
-}
-footer .get-social .twitter {
-	background-position: -33px 0;
-	background-color: #73ace2;
-}
-footer .get-social .youtube {
-	background-position: -132px 0;
-	background-color: #c71e36;
-}
-footer .get-social .facebook {
-	background-position: -66px 0;
-	background-color: #47549e;
-}
-footer .get-social .blogs {
-	background-position: -165px 0;
-	background-color: #e8c03a;
-}
-footer .get-social .linkedin:hover {
-	background-position: 0 -33px;
-}
-footer .get-social .google:hover {
-	background-position: -99px -33px;
-}
-footer .get-social .twitter:hover {
-	background-position: -33px -33px;
-}
-footer .get-social .youtube:hover {
-	background-position: -132px -33px;
-}
-footer .get-social .facebook:hover {
-	background-position: -66px -33px;
-}
-footer .get-social .blogs:hover {
-	background-position: -165px -33px;
-}
-footer .get-social a:hover {
-	background-color: #efefef;
-}
-footer .quick-links {
-	width: 300px;
-}
-footer .quick-links ul {
-	float: left;
-	margin-right: 50px;
-}
-footer .quick-links a {
-	display: block;
-	padding: 0 0 8px 0;
-	color: #cfcfcf;
-	font-size: 13px;
-	text-decoration: none;
-}
-footer .quick-links a:hover {
-	color: #fff;
-}
-footer .popular-keywords {
-}
-footer .popular-keywords ul {
-	float: left;
-	margin-right: 50px;
-}
-footer .popular-keywords a {
-	display: block;
-	padding: 0 0 8px 0;
-	color: #cfcfcf;
-	font-size: 13px;
-	text-decoration: none;
-}
-footer .popular-keywords a:hover {
-	color: #fff;
-}
+
+
 
 
 footer .copyright {
@@ -429,25 +322,47 @@ dd {
 }
 
 ul {
-	margin-top: 1em;
-	margin-bottom: 1em;
-}
+	display: block;
+    margin-top: .5 em;
+	margin-bottom: .5 em;
+    }
 
 ul li {
 	margin-top: 0.5em;
 	margin-bottom: 0.5em;
+    list-style: circle inside none;
+    padding-left:2em;    
 }
 
+ul li ul li{
+    margin-top: 0.5em;
+	margin-bottom: 0.5em;
+    list-style: disc inside none;
+    padding-left: 2em;    
+}
+
+ul li ul li ul li{
+    margin-top: 0.5em;
+	margin-bottom: 0.5em;
+    list-style: square inside none;
+    padding-left: 2em;    
+}
+
+
 ol {
-	margin-top: 1em;
+	display: block;
+    margin-top: 1em;
 	margin-bottom: 1em;
+    list-style-type: decimal;
+    padding-left: 40px;
 }
 
 ol li {
 	color: #565656;
 	font-weight: bold;
-	margin-top: 1em;
-	margin-bottom: 1em;
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
+    list-style-type: decimal;
 }
 
 ol li * {
