--- a/styles/help.css
+++ b/styles/help.css
@@ -86,7 +86,7 @@ p {
 	
 	h1 {
 		font-weight: bold; 
-		color: #00A9E0;
+		color: #1E1E1E;
 		font-size: 38px;
 		line-height: 1.5;
         text-align: center
@@ -94,7 +94,7 @@ p {
 	
 	h2 { 
 	  font-weight: bold; 
-		color: #005293;
+		color: #CA7700;
 		font-size: 28px;
 		line-height: 1.25;
 	}
